test/ui/tests/packages/unsupported-dependency-providers/package.stderr
error: the dependency provider `git` is not supported yet
  --> ${TEST_FOLDER}/packages/unsupported-dependency-providers/package.metadata:12:34
   |
12 |             thing0: { provider: "git" },
   |                                  ^^^
   |

error: the dependency provider `registry` is not supported yet
  --> ${TEST_FOLDER}/packages/unsupported-dependency-providers/package.metadata:13:34
   |
13 |             thing1: { provider: "registry" },
   |                                  ^^^^^^^^
   |

error: aborting due to 2 previous errors

