test/ui/tests/packages/unsupported-dependency-providers/package.metadata
# TEST fail check

name: "future",
version: "99.99.999",

components: [
    {
        type: "library",
        path: "library.lushui",

        dependencies: {
            thing0: { provider: "git" },
            thing1: { provider: "registry" },
        },
    },
],
